# lieflow

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
conf/: train.yaml
conf/dataset/: C4_arrow.yaml  Ico_irreg_tet.yaml  Ico_modelnet10.yaml  Ico_modelnet10_noisy.yaml  Oct_irreg_tet.yaml  Oct_modelnet10.yaml  SO2_b_irreg_tet.yaml  SO2_b_modelnet10.yaml  SO2_irreg_tet.yaml  SO2_modelnet10.yaml  SO3_MI_Motion_skeleton.yaml  Tet_irreg_tet.yaml  Tet_modelnet10.yaml
conf/model/flow_matching/: GL2_to_C4_arrow_L.yaml  GL2_to_C4_arrow_M.yaml  SO2_to_C4_arrow.yaml  SO3_MI_Motion_skeleton.yaml  SO3_irreg_tet.yaml  SO3_irreg_tet_time_power_dist.yaml  SO3_modelnet10_transformer.yaml  SO3_modelnet10_transformer_time_power.yaml
experiments/: flow_matching_2d.py  flow_matching_3d.py
scripts/: extract_mi_motion_skeletons.py
src/lieflow/: distributions.py  geometry_2d.py  geometry_3d.py  logger.py  utils.py
src/lieflow/data/: objects.py  sampling_dataset.py
src/lieflow/data/MI_Motion/: dataset.py
src/lieflow/data/ModelNet10/: __init__.py  dataset.py
src/lieflow/flow_matching/arrow/: model.py  net.py
static/js/: index.js
